# ecs-test

./: CMakeLists.txt  main.cpp
Engine/: GlobaEntities.cpp  GlobaEntities.h  Math.cpp  Math.h  Math.inl  Types.cpp  Types.h  ecs.h
Engine/Core/: FeatureLifecycle.cpp  FeatureLifecycle.h  InputFeature.cpp  InputFeature.h  RenderingFeature.cpp  RenderingFeature.h  Types.h
Engine/Utilities/: Format.cpp  Format.h  Logger.cpp  Logger.h  Utils.cpp  Utils.h
Game/: Systems.cpp  Systems.h  Types.cpp  Types.h
Game/Components/: Object.cpp  Object.h  ObjectTree.cpp  ObjectTree.h
Game/Core/: Time.cpp  Time.h  Types.h
Game/Resources/Fonts/insigne-display/: 1001fonts-insigne-display-eula.txt
